# OptionChain

./: .gitignore  CLAUDE.md  LICENSE  Nifty Option Chain.ipynb  OptionChain.ipynb  OptionChainAnalysis.py  README.md  main.py  pyproject.toml  requirements.txt
src/optionchain/: __init__.py  __main__.py  analysis.py  data_fetcher.py  models.py  visualization.py
tests/: __init__.py  conftest.py
tests/integration/: test_data_fetcher.py
tests/unit/: test_analysis.py  test_models.py
